--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -58,10 +58,11 @@
    </issueManagement>
 
    <properties>
-      <version.protostream>1.0.2.Final-redhat-1</version.protostream>
+      <version.protostream>2.0.0.Alpha2-redhat-1</version.protostream>
       <version.aesh>0.33.12.redhat-1</version.aesh>
       <version.commons.pool>1.6.redhat-6</version.commons.pool>
       <version.protobuf>2.5.0</version.protobuf>
+      <version.protoparser>3.1.4.redhat-1</version.protoparser>
       <version.antlr>3.4</version.antlr>
       <version.gnu.getopt>1.0.13.redhat-4</version.gnu.getopt>
       <version.hibernate.search>4.5.0.Final-redhat-3</version.hibernate.search>
