--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -61,7 +61,7 @@
       <version.protostream>2.0.0.Alpha2-redhat-1</version.protostream>
       <version.aesh>0.33.12.redhat-1</version.aesh>
       <version.commons.pool>1.6.redhat-6</version.commons.pool>
-      <version.protobuf>2.5.0</version.protobuf>
+      <version.protobuf>2.6.0.redhat-1</version.protobuf>
       <version.protoparser>3.1.4.redhat-1</version.protoparser>
       <version.antlr>3.4</version.antlr>
       <version.gnu.getopt>1.0.13.redhat-4</version.gnu.getopt>
