BZ1170547 ISPN-4789 Avoid having two OSGi containers running at the same time.

--- a/integrationtests/osgi/src/test/resources/maven.properties
+++ b/integrationtests/osgi/src/test/resources/maven.properties
@@ -5,4 +5,5 @@
 
 project.version=${project.version}
 version.karaf=${version.karaf}
-localRepository=${localRepository}
+version.pax.exam=${version.pax.exam}
+maven.repo.local=${maven.repo.local}
