--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,10 @@
       <module>server/hotrod</module>
       <module>server/rest</module>
       <module>client/hotrod-client</module>
+      <module>all</module>
+      <module>all/embedded</module>
+      <module>all/embedded-query</module>
+      <module>all/remote</module>
       <module>rhq-plugin</module>
       <module>cli/cli-server</module>
       <module>cli/cli-client</module>
@@ -58,6 +62,9 @@
       <module>integrationtests/as-integration-remote-client</module>
       <module>integrationtests/luceneintegration</module>
       <module>integrationtests/compatibility-mode-it</module>
+      <module>integrationtests/all-embedded-it</module>
+      <module>integrationtests/all-embedded-query-it</module>
+      <module>integrationtests/all-remote-it</module>
    </modules>
 
    <profiles>
