BZ1148378 ISPN-4798 Add XSite state transfer configuration to server
* added missing take-offline configuration to CacheAdd

--- a/server/integration/infinispan/src/main/resources/org/jboss/as/clustering/infinispan/subsystem/LocalDescriptions.properties
+++ b/server/integration/infinispan/src/main/resources/org/jboss/as/clustering/infinispan/subsystem/LocalDescriptions.properties
@@ -379,6 +379,14 @@ infinispan.backup.ops.site-status=Displays the current status of the backup site
 infinispan.backup.ops.bring-site-online=Re-enables a previously disabled backup site.
 infinispan.backup.ops.take-site-offline=Disables backup to a remote site.
 
+infinispan.backup.state-transfer=The backup site state transfer configuration for the cache.
+infinispan.backup.state-transfer.add=Add the backup site state transfer configuration to the cache.
+infinispan.backup.state-transfer.remove=Remove the backup site state transfer configuration from the cache.
+infinispan.backup.state-transfer.chunk-size=The number of entries to batch to transfer.
+infinispan.backup.state-transfer.timeout=The timeout, in milliseconds, to wait from the remote site reply.
+infinispan.backup.state-transfer.wait-time=The waiting time, in milliseconds, before retrying.
+infinispan.backup.state-transfer.max-retries=The maximum number of retries.
+
 infinispan.compatibility=Compatibility-mode configuration for the cache.
 infinispan.compatibility.add=Adds compatibility-mode configuration to a cache.
 infinispan.compatibility.remove=Removes compatibility-mode configuration from a cache.
