BZ1151218 ISPN-4821 RHQ operation 'Upload Proto Schemas' no longer works due to changes introduced by ISPN-4357

--- a/server/integration/infinispan/src/main/resources/org/jboss/as/clustering/infinispan/subsystem/LocalDescriptions.properties
+++ b/server/integration/infinispan/src/main/resources/org/jboss/as/clustering/infinispan/subsystem/LocalDescriptions.properties
@@ -23,11 +23,12 @@ infinispan.cache-container.alias.add-alias=Add an alias for this cache container
 infinispan.cache-container.alias.remove-alias=Remove an alias for this cache container
 infinispan.cache-container.add=Add a cache container to the infinispan subsystem
 infinispan.cache-container.remove=Remove a cache container from the infinispan subsystem
-infinispan.cache-container.upload-proto-schemas=Registers one or more protobuf schemas given the URLs, which should be reachable by the server
-infinispan.cache-container.upload-proto-schemas.proto-urls=The URLs for the schemas
-infinispan.cache-container.register-proto-schemas=Registers one or more protobuf schemas
+infinispan.cache-container.upload-proto-schemas=Registers one or more Protobuf schemas given the URLs, which should be reachable by the server
+infinispan.cache-container.upload-proto-schemas.file-names=Unique file names
+infinispan.cache-container.upload-proto-schemas.file-urls=The URLs for the schemas
+infinispan.cache-container.register-proto-schemas=Registers one or more Protobuf schemas
 infinispan.cache-container.register-proto-schemas.file-names=Unique file names
-infinispan.cache-container.register-proto-schemas.file-contents=The contents of the protobuf files corresponding to the provided names
+infinispan.cache-container.register-proto-schemas.file-contents=The contents of the Protobuf files corresponding to the provided names
 # cache container children
 infinispan.cache-container.transport=A transport child of the cache container.
 infinispan.cache-container.local-cache=A replicated cache child of the cache container.
