--- a/distribution/pom.xml
+++ b/distribution/pom.xml
@@ -87,7 +87,7 @@
 
       <dependency>
          <groupId>${project.groupId}</groupId>
-         <artifactId>infinispan-spring</artifactId>
+         <artifactId>infinispan-spring-3</artifactId>
       </dependency>
 
       <dependency>
