--- a/spring/spring-3/pom.xml
+++ b/spring/spring-3/pom.xml
@@ -76,6 +76,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
+            <version>${version.spring-3}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
@@ -129,6 +130,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-test</artifactId>
+            <version>${version.spring-3}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -157,6 +159,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-jdbc</artifactId>
+            <version>${version.spring-3}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
