ISPN-4836 Change entrySet, keySet and values to be backing maps
* Collections now fall back to calling cache or using entry iterator
* Reworked entry iterator to use a visitable command
** Allows for compatibility support
** Also easier detection of transactions

Conflicts:
	commons/src/main/java/org/infinispan/commons/util/CloseableIterable.java
	core/src/main/java/org/infinispan/Cache.java
	core/src/main/java/org/infinispan/CacheImpl.java
	core/src/main/java/org/infinispan/DecoratedCache.java
	core/src/main/java/org/infinispan/cache/impl/AbstractDelegatingCache.java
	core/src/main/java/org/infinispan/commands/CommandsFactory.java
	core/src/main/java/org/infinispan/commands/read/ValuesCommand.java
	core/src/main/java/org/infinispan/interceptors/CacheLoaderInterceptor.java
	core/src/main/java/org/infinispan/interceptors/TxInterceptor.java
	core/src/main/java/org/infinispan/iteration/DistributedEntryRetriever.java
	core/src/main/java/org/infinispan/iteration/EntryIterableImpl.java
	core/src/main/java/org/infinispan/iteration/TrackingEntryIterable.java
	core/src/main/java/org/infinispan/security/impl/SecureCacheImpl.java
	documentation/src/main/asciidoc/user_guide/chapter-53-Using_the_Cache_API.adoc

--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
       <module>parent</module>
       <module>commons</module>
       <module>core</module>
+      <module>bulk</module>
       <module>tools</module>
       <module>query</module>
       <module>query-dsl</module>
