--- a/server/integration/infinispan/src/main/resources/org/jboss/as/clustering/infinispan/subsystem/LocalDescriptions.properties
+++ b/server/integration/infinispan/src/main/resources/org/jboss/as/clustering/infinispan/subsystem/LocalDescriptions.properties
@@ -88,6 +88,7 @@ infinispan.cache.synchronize-data.migrator-name=The migrator to synchronize to.
 infinispan.cache.disconnect-source=Disconnects the target cluster from the source cluster according to the specified migrator.
 infinispan.cache.disconnect-source.migrator-name=The migrator to disconnect from.
 infinispan.cache.record-known-global-keyset=Dumps the global known keyset to a well-known key for retrieval by the upgrade process.
+infinispan.cache.mass-reindex=Initiates a mass reindex of the entries in the cache
 # cache metrics
 infinispan.cache.cache-name=The name of this cache
 infinispan.cache.cache-status=The status of the cache component. May return null if the cache is not started.
@@ -119,6 +120,7 @@ infinispan.cache.version=Returns the version of Infinispan.
 #
 infinispan.clustered-cache.async-marshalling=If enabled, this will cause marshalling of entries to be performed asynchronously.
 infinispan.clustered-cache.average-replication-time=The average time spent in the transport layer, in milliseconds
+infinispan.clustered-cache.cache-availability=The availability status of the cache.
 infinispan.clustered-cache.mode=Sets the clustered cache mode, ASYNC for asynchronous operation, or SYNC for synchronous operation.
 infinispan.clustered-cache.queue-size=In ASYNC mode, this attribute can be used to trigger flushing of the queue when it reaches a specific threshold.
 infinispan.clustered-cache.queue-flush-interval=In ASYNC mode, this attribute controls how often the asynchronous thread used to flush the replication queue runs. This should be a positive integer which represents thread wakeup time in milliseconds.
