BZ1156088 ISPN-4874 Cross-site replication - allow defining custom backup cache name

--- a/server/integration/infinispan/src/main/resources/org/jboss/as/clustering/infinispan/subsystem/LocalDescriptions.properties
+++ b/server/integration/infinispan/src/main/resources/org/jboss/as/clustering/infinispan/subsystem/LocalDescriptions.properties
@@ -72,6 +72,8 @@ infinispan.cache.jndi-name=The jndi-name to which to bind this cache instance.
 infinispan.cache.module=The module whose class loader should be used when building this cache's configuration.
 infinispan.cache.indexing-properties=Properties to control indexing behaviour
 infinispan.cache.remove=Remove a cache from this container.
+infinispan.cache.remote-cache=The name of the remote cache that backups data here.
+infinispan.cache.remote-site=The name of the remote site containing the cache that backups data here.
 # cache operations
 infinispan.cache.clear-cache=Clears the cache contents.
 infinispan.cache.start-cache=Starts the cache.
