--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -155,6 +155,7 @@
       <version.slf4j>1.7.5</version.slf4j>
       <version.spymemcached>2.8.0</version.spymemcached>
       <version.stringtemplate>3.2.1-redhat-1</version.stringtemplate>
+      <version.spring>3.2.9.RELEASE</version.spring>
       <version.testng>6.8</version.testng>
       <version.weld>1.1.23.Final-redhat-1</version.weld>
       <version.xnio>3.0.10.GA-redhat-1</version.xnio>
