BZ1160235 ISPN-4464 Unify test suite for remote and embedded DSL based query tests
Remote and embedded DSL query tests share the domain model. The model defines interfaces that are implemented
using Hibernate Search anontated entities for embedded mode and Protobuf entities for remote mode. The test
driver code is shared between embedded and remote tests.

--- a/client/hotrod-client/pom.xml
+++ b/client/hotrod-client/pom.xml
@@ -44,6 +44,14 @@
 
       <dependency>
          <groupId>${project.groupId}</groupId>
+         <artifactId>infinispan-query</artifactId>
+         <version>${project.version}</version>
+         <type>test-jar</type>
+         <scope>test</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>${project.groupId}</groupId>
          <artifactId>infinispan-remote-query-server</artifactId>
          <scope>test</scope>
       </dependency>
@@ -88,10 +96,10 @@
 
       <dependency>
          <groupId>org.infinispan.protostream</groupId>
-         <artifactId>sample-domain-implementation</artifactId>
+         <artifactId>sample-domain-definition</artifactId>
          <scope>test</scope>
       </dependency>
-      
+
       <dependency>
          <groupId>org.jboss.sasl</groupId>
          <artifactId>jboss-sasl</artifactId>
