--- a/bom/pom.xml
+++ b/bom/pom.xml
@@ -397,10 +397,15 @@
          </dependency>
          <dependency>
             <groupId>org.infinispan.protostream</groupId>
+            <artifactId>sample-domain-definition</artifactId>
+            <version>${version.protostream}</version>
+         </dependency>
+         <dependency>
+            <groupId>org.infinispan.protostream</groupId>
             <artifactId>sample-domain-implementation</artifactId>
             <version>${version.protostream}</version>
          </dependency>
-         
+
          <dependency>
             <groupId>org.fusesource.leveldbjni</groupId>
             <artifactId>leveldbjni-all</artifactId>
