--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -94,9 +94,9 @@
       <module.skipComponentMetaDataProcessing>true</module.skipComponentMetaDataProcessing>
       <module.metadata.isCoreModule>false</module.metadata.isCoreModule>
       <!-- Versions for dependencies -->
-      <version.apache.ds>2.0.0-M15</version.apache.ds>
+      <version.apache.ds>2.0.0-M16</version.apache.ds>
       <version.arquillian>1.0.3.Final</version.arquillian>
-      <version.arquillian.container.managed>7.4.0.Final-redhat-19</version.arquillian.container.managed>
+      <version.arquillian.container.managed>7.4.2.Final-redhat-2</version.arquillian.container.managed>
       <version.arquillian.container.weld>1.0.0.CR3</version.arquillian.container.weld>
       <version.c3p0>0.9.1.2</version.c3p0>
       <version.c3p0_dep.mchange-commons-java>0.2.7</version.c3p0_dep.mchange-commons-java>
@@ -106,13 +106,13 @@
       <version.commons.dbcp>1.4-redhat-2</version.commons.dbcp>
       <version.commons.compress>1.5</version.commons.compress>
       <version.commons.httpclient>3.1-redhat-2</version.commons.httpclient>
-      <version.commons.logging>1.1.1</version.commons.logging>
+      <version.commons.logging>1.1.1-redhat-2</version.commons.logging>
       <version.commons.math>2.2</version.commons.math>
       <version.freemarker>2.3.19-redhat-1</version.freemarker>
       <version.guava>13.0.1-redhat-1</version.guava>
       <version.geronimo.tm>3.1.1</version.geronimo.tm>
       <version.h2.driver>1.4.180.redhat-3</version.h2.driver>
-      <version.hibernate.core>4.2.14.SP1-redhat-5</version.hibernate.core>
+      <version.hibernate.core>4.2.14.SP4-redhat-1</version.hibernate.core>
       <version.hibernate.entitymanager>${version.hibernate.core}</version.hibernate.entitymanager>
       <version.hibernate.hql.parser>1.0.0.CR2-redhat-1</version.hibernate.hql.parser>
       <version.hibernate.javax.persistence>1.0.1.Final-redhat-2</version.hibernate.javax.persistence>
@@ -123,24 +123,24 @@
       <version.hibernate_dep.javaassist>3.18.1-GA-redhat-1</version.hibernate_dep.javaassist>
       <version.hibernate_dep.jandex>1.0.3.Final-redhat-2</version.hibernate_dep.jandex>
       <version.hibernate_dep.hibernate-commons-annotations>4.0.2.Final</version.hibernate_dep.hibernate-commons-annotations>
-      <version.httpclient>4.2.1-redhat-1</version.httpclient>
+      <version.httpclient>4.2.6.redhat-3</version.httpclient>
       <version.howl>1.0.1-1</version.howl>
-      <version.jackson>1.9.9-redhat-2</version.jackson>
+      <version.jackson>1.9.9.redhat-3</version.jackson>
       <version.javassist>3.18.1-GA-redhat-1</version.javassist>
       <version.javax.cache>1.0.0-PFD</version.javax.cache>
-      <version.javax.enterprise>1.0-SP4.redhat-3</version.javax.enterprise>
-      <version.jboss.as>7.4.0.Final-redhat-19</version.jboss.as>
-      <version.jboss.ejb-client>1.0.25.Final-redhat-1</version.jboss.ejb-client>
+      <version.javax.enterprise>1.0-SP4-redhat-4</version.javax.enterprise>
+      <version.jboss.as>7.4.2.Final-redhat-2</version.jboss.as>
+      <version.jboss.ejb-client>1.0.26.Final-redhat-1</version.jboss.ejb-client>
       <version.jboss.logging.jboss-logging-processor>1.1.0.Final-redhat-1</version.jboss.logging.jboss-logging-processor>
-      <version.jboss.logmanager>1.4.0.Final-redhat-1</version.jboss.logmanager>
-      <version.jboss.remoting3>3.2.19.GA-redhat-1</version.jboss.remoting3>
-      <version.jboss.remotingjmx>1.1.2.Final-redhat-1</version.jboss.remotingjmx>
+      <version.jboss.logmanager>1.5.2.Final-redhat-2</version.jboss.logmanager>
+      <version.jboss.remoting3>3.3.3.Final-redhat-1</version.jboss.remoting3>
+      <version.jboss.remotingjmx>1.1.3.Final-redhat-2</version.jboss.remotingjmx>
       <version.jboss.sasl>1.0.4.Final-redhat-1</version.jboss.sasl>
       <version.jboss.spec>3.0.2.Final-redhat-4</version.jboss.spec>
       <version.org.jboss.spec.javax.resource.jboss-connector-api_1.6_spec>1.0.1.Final-redhat-2</version.org.jboss.spec.javax.resource.jboss-connector-api_1.6_spec>
       <version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.0_spec>1.0.2.Final-redhat-1</version.org.jboss.spec.javax.servlet.jboss-servlet-api_3.0_spec>
       <version.org.jboss.naming>5.0.5.Final-redhat-1</version.org.jboss.naming>
-      <version.org.jboss.jbossts.jbossjts>4.17.21.Final-redhat-2</version.org.jboss.jbossts.jbossjts>
+      <version.org.jboss.jbossts.jbossjts>4.17.22.Final-redhat-2</version.org.jboss.jbossts.jbossjts>
       <version.jcipannotations>1.0.redhat-6</version.jcipannotations>
       <version.jetty>6.1.25</version.jetty>
       <version.junit>4.11</version.junit>
@@ -150,7 +150,7 @@
       <version.mc4j>1.2.15.1</version.mc4j>
       <version.mockito>1.9.5</version.mockito>
       <version.mockito_dep.objenesis>1.4</version.mockito_dep.objenesis>
-      <version.resteasy>2.3.8.Final-redhat-3</version.resteasy>
+      <version.resteasy>2.3.8.SP3-redhat-2</version.resteasy>
       <version.org.picketbox>4.0.19.SP8-redhat-1</version.org.picketbox>
       <version.shrinkwrapResolver>2.0.0</version.shrinkwrapResolver>
       <version.slf4j>1.7.5</version.slf4j>
@@ -174,7 +174,7 @@
       <version.maven.surefire>2.14.1</version.maven.surefire>
       <version.maven.invoker>1.8</version.maven.invoker>
       <version.jacoco>0.5.10.201208310627</version.jacoco>
-      <version.asm>3.3.1</version.asm>
+      <version.asm>3.3.1-redhat-5</version.asm>
       <version.pax.url>1.3.7</version.pax.url>
       <version.karaf>2.3.3</version.karaf>
       <version.pax.exam>4.1.0</version.pax.exam>
