BZ1161082 Push more artifacts into the uberjar - Embedded jar now includes remote and rest stores and adapter52x - The Embedded CLI is now packaged as an uberjar - Relocate most dependency jars

--- a/all/embedded-query/pom.xml
+++ b/all/embedded-query/pom.xml
@@ -62,6 +62,12 @@
                            <exclude>org.osgi:org.osgi.compendium:jar:</exclude>
                         </excludes>
                      </artifactSet>
+                     <relocations>
+                        <relocation>
+                           <pattern>org.jboss.logging</pattern>
+                           <shadedPattern>infinispanembedded.org.jboss.logging</shadedPattern>
+                        </relocation>
+                     </relocations>
                      <createSourcesJar>true</createSourcesJar>
                      <transformers>
                         <transformer implementation="org.apache.maven.plugins.shade.resource.DontIncludeResourceTransformer">
