--- a/cli/cli-client/pom.xml
+++ b/cli/cli-client/pom.xml
@@ -36,7 +36,7 @@
       </dependency>
       <dependency>
           <groupId>org.infinispan</groupId>
-          <artifactId>infinispan-client-hotrod</artifactId>
+          <artifactId>infinispan-commons</artifactId>
       </dependency>
       <dependency>
          <groupId>org.jboss.sasl</groupId>
