--- a/all/remote/pom.xml
+++ b/all/remote/pom.xml
@@ -27,6 +27,12 @@
 
       <dependency>
          <groupId>org.infinispan</groupId>
+         <artifactId>infinispan-cdi</artifactId>
+         <optional>true</optional>
+      </dependency>
+
+      <dependency>
+         <groupId>org.infinispan</groupId>
          <artifactId>infinispan-client-hotrod</artifactId>
          <optional>true</optional>
       </dependency>
@@ -68,9 +74,14 @@
                   <configuration>
                      <artifactSet>
                         <excludes>
+                           <exclude>javax.cache:cache-api:jar:</exclude>
                            <exclude>log4j:log4j:jar:</exclude>
                            <exclude>net.jcip:jcip-annotations:jar:</exclude>
+                           <exclude>org.infinispan:infinispan-core:jar:</exclude>
+                           <exclude>org.jboss.marshalling:jboss-marshalling:jar:</exclude>
+                           <exclude>org.jboss.marshalling:jboss-marshalling-river:jar:</exclude>
                            <exclude>org.jboss.spec.javax.transaction:jboss-transaction-api_1.1_spec:jar:</exclude>
+                           <exclude>org.jgroups:jgroups:jar:</exclude>
                            <exclude>org.osgi:org.osgi.core:jar:</exclude>
                            <exclude>org.osgi:org.osgi.compendium:jar:</exclude>
                         </excludes>
